// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=singleColumn > pivotMode=false > showOpenedGroup=false > autoGroupColumnDef.valueGetter=(p) => \`autoColDef.valueGetter(\${p.data?.athlete ?? "MISSING"})\` > autoGroupColumnDef.valueFormatter=(p) => \`autoColDef.valueFormatter(\${p.value})\` > autoGroupColumnDef.useValueFormatterForExport=false > colDef[1].valueFormatter=(p) => \`columnDef[1].valueFormatter(\${p.value})\` > colDef[1].useValueFormatterForExport=false 1`] = `
""Group"
" -> Ireland"
" -> Ireland -> 2000"
"autoColDef.valueGetter(John Von Neumann)"
"autoColDef.valueGetter(Alan Turing)"
" -> Ireland -> Total 2000"
" -> Ireland -> "
"autoColDef.valueGetter(Ada Lovelace)"
" -> Ireland -> Total "
" -> Total Ireland"
" -> Italy"
" -> Italy -> 2000"
"autoColDef.valueGetter(Donald Knuth)"
" -> Italy -> Total 2000"
" -> Italy -> 2001"
"autoColDef.valueGetter(Marvin Minsky)"
" -> Italy -> Total 2001"
" -> Total Italy"
" -> (Blanks)"
" -> (Blanks) -> 2000"
"autoColDef.valueGetter(Donald Knuth)"
" -> (Blanks) -> Total 2000"
" -> (Blanks) -> 2001"
"autoColDef.valueGetter(Marvin Minsky)"
" -> (Blanks) -> Total 2001"
" -> (Blanks) -> "
"autoColDef.valueGetter(Donald Knuth)"
" -> (Blanks) -> Total "
" -> Total (Blanks)""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=singleColumn > pivotMode=false > showOpenedGroup=false > autoGroupColumnDef.valueGetter=(p) => \`autoColDef.valueGetter(\${p.data?.athlete ?? "MISSING"})\` > autoGroupColumnDef.valueFormatter=(p) => \`autoColDef.valueFormatter(\${p.value})\` > autoGroupColumnDef.useValueFormatterForExport=false > colDef[1].valueFormatter=(p) => \`columnDef[1].valueFormatter(\${p.value})\` > colDef[1].useValueFormatterForExport=true 1`] = `
""Group"
" -> Ireland"
" -> Ireland -> columnDef[1].valueFormatter(2000)"
"autoColDef.valueGetter(John Von Neumann)"
"autoColDef.valueGetter(Alan Turing)"
" -> Ireland -> Total columnDef[1].valueFormatter(2000)"
" -> Ireland -> columnDef[1].valueFormatter()"
"autoColDef.valueGetter(Ada Lovelace)"
" -> Ireland -> Total columnDef[1].valueFormatter()"
" -> Total Ireland"
" -> Italy"
" -> Italy -> columnDef[1].valueFormatter(2000)"
"autoColDef.valueGetter(Donald Knuth)"
" -> Italy -> Total columnDef[1].valueFormatter(2000)"
" -> Italy -> columnDef[1].valueFormatter(2001)"
"autoColDef.valueGetter(Marvin Minsky)"
" -> Italy -> Total columnDef[1].valueFormatter(2001)"
" -> Total Italy"
" -> (Blanks)"
" -> (Blanks) -> columnDef[1].valueFormatter(2000)"
"autoColDef.valueGetter(Donald Knuth)"
" -> (Blanks) -> Total columnDef[1].valueFormatter(2000)"
" -> (Blanks) -> columnDef[1].valueFormatter(2001)"
"autoColDef.valueGetter(Marvin Minsky)"
" -> (Blanks) -> Total columnDef[1].valueFormatter(2001)"
" -> (Blanks) -> columnDef[1].valueFormatter()"
"autoColDef.valueGetter(Donald Knuth)"
" -> (Blanks) -> Total columnDef[1].valueFormatter()"
" -> Total (Blanks)""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=singleColumn > pivotMode=false > showOpenedGroup=false > autoGroupColumnDef.valueGetter=(p) => \`autoColDef.valueGetter(\${p.data?.athlete ?? "MISSING"})\` > autoGroupColumnDef.valueFormatter=(p) => \`autoColDef.valueFormatter(\${p.value})\` > autoGroupColumnDef.useValueFormatterForExport=false > colDef[1].valueFormatter=undefined > snapshot 1`] = `
""Group"
" -> Ireland"
" -> Ireland -> columnDef[1].valueFormatter(2000)"
"autoColDef.valueGetter(John Von Neumann)"
"autoColDef.valueGetter(Alan Turing)"
" -> Ireland -> Total columnDef[1].valueFormatter(2000)"
" -> Ireland -> columnDef[1].valueFormatter()"
"autoColDef.valueGetter(Ada Lovelace)"
" -> Ireland -> Total columnDef[1].valueFormatter()"
" -> Total Ireland"
" -> Italy"
" -> Italy -> columnDef[1].valueFormatter(2000)"
"autoColDef.valueGetter(Donald Knuth)"
" -> Italy -> Total columnDef[1].valueFormatter(2000)"
" -> Italy -> columnDef[1].valueFormatter(2001)"
"autoColDef.valueGetter(Marvin Minsky)"
" -> Italy -> Total columnDef[1].valueFormatter(2001)"
" -> Total Italy"
" -> (Blanks)"
" -> (Blanks) -> columnDef[1].valueFormatter(2000)"
"autoColDef.valueGetter(Donald Knuth)"
" -> (Blanks) -> Total columnDef[1].valueFormatter(2000)"
" -> (Blanks) -> columnDef[1].valueFormatter(2001)"
"autoColDef.valueGetter(Marvin Minsky)"
" -> (Blanks) -> Total columnDef[1].valueFormatter(2001)"
" -> (Blanks) -> columnDef[1].valueFormatter()"
"autoColDef.valueGetter(Donald Knuth)"
" -> (Blanks) -> Total columnDef[1].valueFormatter()"
" -> Total (Blanks)""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=singleColumn > pivotMode=false > showOpenedGroup=false > autoGroupColumnDef.valueGetter=(p) => \`autoColDef.valueGetter(\${p.data?.athlete ?? "MISSING"})\` > autoGroupColumnDef.valueFormatter=(p) => \`autoColDef.valueFormatter(\${p.value})\` > autoGroupColumnDef.useValueFormatterForExport=true > colDef[1].valueFormatter=(p) => \`columnDef[1].valueFormatter(\${p.value})\` > colDef[1].useValueFormatterForExport=false 1`] = `
""Group"
" -> Ireland"
" -> Ireland -> 2000"
"autoColDef.valueFormatter(autoColDef.valueGetter(John Von Neumann))"
"autoColDef.valueFormatter(autoColDef.valueGetter(Alan Turing))"
" -> Ireland -> Total 2000"
" -> Ireland -> "
"autoColDef.valueFormatter(autoColDef.valueGetter(Ada Lovelace))"
" -> Ireland -> Total "
" -> Total Ireland"
" -> Italy"
" -> Italy -> 2000"
"autoColDef.valueFormatter(autoColDef.valueGetter(Donald Knuth))"
" -> Italy -> Total 2000"
" -> Italy -> 2001"
"autoColDef.valueFormatter(autoColDef.valueGetter(Marvin Minsky))"
" -> Italy -> Total 2001"
" -> Total Italy"
" -> (Blanks)"
" -> (Blanks) -> 2000"
"autoColDef.valueFormatter(autoColDef.valueGetter(Donald Knuth))"
" -> (Blanks) -> Total 2000"
" -> (Blanks) -> 2001"
"autoColDef.valueFormatter(autoColDef.valueGetter(Marvin Minsky))"
" -> (Blanks) -> Total 2001"
" -> (Blanks) -> "
"autoColDef.valueFormatter(autoColDef.valueGetter(Donald Knuth))"
" -> (Blanks) -> Total "
" -> Total (Blanks)""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=singleColumn > pivotMode=false > showOpenedGroup=false > autoGroupColumnDef.valueGetter=(p) => \`autoColDef.valueGetter(\${p.data?.athlete ?? "MISSING"})\` > autoGroupColumnDef.valueFormatter=(p) => \`autoColDef.valueFormatter(\${p.value})\` > autoGroupColumnDef.useValueFormatterForExport=true > colDef[1].valueFormatter=(p) => \`columnDef[1].valueFormatter(\${p.value})\` > colDef[1].useValueFormatterForExport=true 1`] = `
""Group"
" -> Ireland"
" -> Ireland -> columnDef[1].valueFormatter(2000)"
"autoColDef.valueFormatter(autoColDef.valueGetter(John Von Neumann))"
"autoColDef.valueFormatter(autoColDef.valueGetter(Alan Turing))"
" -> Ireland -> Total columnDef[1].valueFormatter(2000)"
" -> Ireland -> columnDef[1].valueFormatter()"
"autoColDef.valueFormatter(autoColDef.valueGetter(Ada Lovelace))"
" -> Ireland -> Total columnDef[1].valueFormatter()"
" -> Total Ireland"
" -> Italy"
" -> Italy -> columnDef[1].valueFormatter(2000)"
"autoColDef.valueFormatter(autoColDef.valueGetter(Donald Knuth))"
" -> Italy -> Total columnDef[1].valueFormatter(2000)"
" -> Italy -> columnDef[1].valueFormatter(2001)"
"autoColDef.valueFormatter(autoColDef.valueGetter(Marvin Minsky))"
" -> Italy -> Total columnDef[1].valueFormatter(2001)"
" -> Total Italy"
" -> (Blanks)"
" -> (Blanks) -> columnDef[1].valueFormatter(2000)"
"autoColDef.valueFormatter(autoColDef.valueGetter(Donald Knuth))"
" -> (Blanks) -> Total columnDef[1].valueFormatter(2000)"
" -> (Blanks) -> columnDef[1].valueFormatter(2001)"
"autoColDef.valueFormatter(autoColDef.valueGetter(Marvin Minsky))"
" -> (Blanks) -> Total columnDef[1].valueFormatter(2001)"
" -> (Blanks) -> columnDef[1].valueFormatter()"
"autoColDef.valueFormatter(autoColDef.valueGetter(Donald Knuth))"
" -> (Blanks) -> Total columnDef[1].valueFormatter()"
" -> Total (Blanks)""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=singleColumn > pivotMode=false > showOpenedGroup=false > autoGroupColumnDef.valueGetter=(p) => \`autoColDef.valueGetter(\${p.data?.athlete ?? "MISSING"})\` > autoGroupColumnDef.valueFormatter=(p) => \`autoColDef.valueFormatter(\${p.value})\` > autoGroupColumnDef.useValueFormatterForExport=true > colDef[1].valueFormatter=undefined > snapshot 1`] = `
""Group"
" -> Ireland"
" -> Ireland -> columnDef[1].valueFormatter(2000)"
"autoColDef.valueFormatter(autoColDef.valueGetter(John Von Neumann))"
"autoColDef.valueFormatter(autoColDef.valueGetter(Alan Turing))"
" -> Ireland -> Total columnDef[1].valueFormatter(2000)"
" -> Ireland -> columnDef[1].valueFormatter()"
"autoColDef.valueFormatter(autoColDef.valueGetter(Ada Lovelace))"
" -> Ireland -> Total columnDef[1].valueFormatter()"
" -> Total Ireland"
" -> Italy"
" -> Italy -> columnDef[1].valueFormatter(2000)"
"autoColDef.valueFormatter(autoColDef.valueGetter(Donald Knuth))"
" -> Italy -> Total columnDef[1].valueFormatter(2000)"
" -> Italy -> columnDef[1].valueFormatter(2001)"
"autoColDef.valueFormatter(autoColDef.valueGetter(Marvin Minsky))"
" -> Italy -> Total columnDef[1].valueFormatter(2001)"
" -> Total Italy"
" -> (Blanks)"
" -> (Blanks) -> columnDef[1].valueFormatter(2000)"
"autoColDef.valueFormatter(autoColDef.valueGetter(Donald Knuth))"
" -> (Blanks) -> Total columnDef[1].valueFormatter(2000)"
" -> (Blanks) -> columnDef[1].valueFormatter(2001)"
"autoColDef.valueFormatter(autoColDef.valueGetter(Marvin Minsky))"
" -> (Blanks) -> Total columnDef[1].valueFormatter(2001)"
" -> (Blanks) -> columnDef[1].valueFormatter()"
"autoColDef.valueFormatter(autoColDef.valueGetter(Donald Knuth))"
" -> (Blanks) -> Total columnDef[1].valueFormatter()"
" -> Total (Blanks)""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=singleColumn > pivotMode=false > showOpenedGroup=false > autoGroupColumnDef.valueGetter=(p) => \`autoColDef.valueGetter(\${p.data?.athlete ?? "MISSING"})\` > autoGroupColumnDef.valueFormatter=undefined > colDef[1].valueFormatter=(p) => \`columnDef[1].valueFormatter(\${p.value})\` > colDef[1].useValueFormatterForExport=false 1`] = `
""Group"
" -> Ireland"
" -> Ireland -> 2000"
"autoColDef.valueGetter(John Von Neumann)"
"autoColDef.valueGetter(Alan Turing)"
" -> Ireland -> Total 2000"
" -> Ireland -> "
"autoColDef.valueGetter(Ada Lovelace)"
" -> Ireland -> Total "
" -> Total Ireland"
" -> Italy"
" -> Italy -> 2000"
"autoColDef.valueGetter(Donald Knuth)"
" -> Italy -> Total 2000"
" -> Italy -> 2001"
"autoColDef.valueGetter(Marvin Minsky)"
" -> Italy -> Total 2001"
" -> Total Italy"
" -> (Blanks)"
" -> (Blanks) -> 2000"
"autoColDef.valueGetter(Donald Knuth)"
" -> (Blanks) -> Total 2000"
" -> (Blanks) -> 2001"
"autoColDef.valueGetter(Marvin Minsky)"
" -> (Blanks) -> Total 2001"
" -> (Blanks) -> "
"autoColDef.valueGetter(Donald Knuth)"
" -> (Blanks) -> Total "
" -> Total (Blanks)""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=singleColumn > pivotMode=false > showOpenedGroup=false > autoGroupColumnDef.valueGetter=(p) => \`autoColDef.valueGetter(\${p.data?.athlete ?? "MISSING"})\` > autoGroupColumnDef.valueFormatter=undefined > colDef[1].valueFormatter=(p) => \`columnDef[1].valueFormatter(\${p.value})\` > colDef[1].useValueFormatterForExport=true 1`] = `
""Group"
" -> Ireland"
" -> Ireland -> columnDef[1].valueFormatter(2000)"
"autoColDef.valueGetter(John Von Neumann)"
"autoColDef.valueGetter(Alan Turing)"
" -> Ireland -> Total columnDef[1].valueFormatter(2000)"
" -> Ireland -> columnDef[1].valueFormatter()"
"autoColDef.valueGetter(Ada Lovelace)"
" -> Ireland -> Total columnDef[1].valueFormatter()"
" -> Total Ireland"
" -> Italy"
" -> Italy -> columnDef[1].valueFormatter(2000)"
"autoColDef.valueGetter(Donald Knuth)"
" -> Italy -> Total columnDef[1].valueFormatter(2000)"
" -> Italy -> columnDef[1].valueFormatter(2001)"
"autoColDef.valueGetter(Marvin Minsky)"
" -> Italy -> Total columnDef[1].valueFormatter(2001)"
" -> Total Italy"
" -> (Blanks)"
" -> (Blanks) -> columnDef[1].valueFormatter(2000)"
"autoColDef.valueGetter(Donald Knuth)"
" -> (Blanks) -> Total columnDef[1].valueFormatter(2000)"
" -> (Blanks) -> columnDef[1].valueFormatter(2001)"
"autoColDef.valueGetter(Marvin Minsky)"
" -> (Blanks) -> Total columnDef[1].valueFormatter(2001)"
" -> (Blanks) -> columnDef[1].valueFormatter()"
"autoColDef.valueGetter(Donald Knuth)"
" -> (Blanks) -> Total columnDef[1].valueFormatter()"
" -> Total (Blanks)""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=singleColumn > pivotMode=false > showOpenedGroup=false > autoGroupColumnDef.valueGetter=(p) => \`autoColDef.valueGetter(\${p.data?.athlete ?? "MISSING"})\` > autoGroupColumnDef.valueFormatter=undefined > colDef[1].valueFormatter=undefined > snapshot 1`] = `
""Group"
" -> Ireland"
" -> Ireland -> columnDef[1].valueFormatter(2000)"
"autoColDef.valueGetter(John Von Neumann)"
"autoColDef.valueGetter(Alan Turing)"
" -> Ireland -> Total columnDef[1].valueFormatter(2000)"
" -> Ireland -> columnDef[1].valueFormatter()"
"autoColDef.valueGetter(Ada Lovelace)"
" -> Ireland -> Total columnDef[1].valueFormatter()"
" -> Total Ireland"
" -> Italy"
" -> Italy -> columnDef[1].valueFormatter(2000)"
"autoColDef.valueGetter(Donald Knuth)"
" -> Italy -> Total columnDef[1].valueFormatter(2000)"
" -> Italy -> columnDef[1].valueFormatter(2001)"
"autoColDef.valueGetter(Marvin Minsky)"
" -> Italy -> Total columnDef[1].valueFormatter(2001)"
" -> Total Italy"
" -> (Blanks)"
" -> (Blanks) -> columnDef[1].valueFormatter(2000)"
"autoColDef.valueGetter(Donald Knuth)"
" -> (Blanks) -> Total columnDef[1].valueFormatter(2000)"
" -> (Blanks) -> columnDef[1].valueFormatter(2001)"
"autoColDef.valueGetter(Marvin Minsky)"
" -> (Blanks) -> Total columnDef[1].valueFormatter(2001)"
" -> (Blanks) -> columnDef[1].valueFormatter()"
"autoColDef.valueGetter(Donald Knuth)"
" -> (Blanks) -> Total columnDef[1].valueFormatter()"
" -> Total (Blanks)""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=singleColumn > pivotMode=false > showOpenedGroup=false > autoGroupColumnDef.valueGetter=undefined > autoGroupColumnDef.valueFormatter=(p) => \`autoColDef.valueFormatter(\${p.value})\` > autoGroupColumnDef.useValueFormatterForExport=false > colDef[1].valueFormatter=(p) => \`columnDef[1].valueFormatter(\${p.value})\` > colDef[1].useValueFormatterForExport=false 1`] = `
""Group"
" -> Ireland"
" -> Ireland -> 2000"
""
""
" -> Ireland -> Total 2000"
" -> Ireland -> "
""
" -> Ireland -> Total "
" -> Total Ireland"
" -> Italy"
" -> Italy -> 2000"
""
" -> Italy -> Total 2000"
" -> Italy -> 2001"
""
" -> Italy -> Total 2001"
" -> Total Italy"
" -> (Blanks)"
" -> (Blanks) -> 2000"
""
" -> (Blanks) -> Total 2000"
" -> (Blanks) -> 2001"
""
" -> (Blanks) -> Total 2001"
" -> (Blanks) -> "
""
" -> (Blanks) -> Total "
" -> Total (Blanks)""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=singleColumn > pivotMode=false > showOpenedGroup=false > autoGroupColumnDef.valueGetter=undefined > autoGroupColumnDef.valueFormatter=(p) => \`autoColDef.valueFormatter(\${p.value})\` > autoGroupColumnDef.useValueFormatterForExport=false > colDef[1].valueFormatter=(p) => \`columnDef[1].valueFormatter(\${p.value})\` > colDef[1].useValueFormatterForExport=true 1`] = `
""Group"
" -> Ireland"
" -> Ireland -> columnDef[1].valueFormatter(2000)"
""
""
" -> Ireland -> Total columnDef[1].valueFormatter(2000)"
" -> Ireland -> columnDef[1].valueFormatter()"
""
" -> Ireland -> Total columnDef[1].valueFormatter()"
" -> Total Ireland"
" -> Italy"
" -> Italy -> columnDef[1].valueFormatter(2000)"
""
" -> Italy -> Total columnDef[1].valueFormatter(2000)"
" -> Italy -> columnDef[1].valueFormatter(2001)"
""
" -> Italy -> Total columnDef[1].valueFormatter(2001)"
" -> Total Italy"
" -> (Blanks)"
" -> (Blanks) -> columnDef[1].valueFormatter(2000)"
""
" -> (Blanks) -> Total columnDef[1].valueFormatter(2000)"
" -> (Blanks) -> columnDef[1].valueFormatter(2001)"
""
" -> (Blanks) -> Total columnDef[1].valueFormatter(2001)"
" -> (Blanks) -> columnDef[1].valueFormatter()"
""
" -> (Blanks) -> Total columnDef[1].valueFormatter()"
" -> Total (Blanks)""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=singleColumn > pivotMode=false > showOpenedGroup=false > autoGroupColumnDef.valueGetter=undefined > autoGroupColumnDef.valueFormatter=(p) => \`autoColDef.valueFormatter(\${p.value})\` > autoGroupColumnDef.useValueFormatterForExport=false > colDef[1].valueFormatter=undefined > snapshot 1`] = `
""Group"
" -> Ireland"
" -> Ireland -> columnDef[1].valueFormatter(2000)"
""
""
" -> Ireland -> Total columnDef[1].valueFormatter(2000)"
" -> Ireland -> columnDef[1].valueFormatter()"
""
" -> Ireland -> Total columnDef[1].valueFormatter()"
" -> Total Ireland"
" -> Italy"
" -> Italy -> columnDef[1].valueFormatter(2000)"
""
" -> Italy -> Total columnDef[1].valueFormatter(2000)"
" -> Italy -> columnDef[1].valueFormatter(2001)"
""
" -> Italy -> Total columnDef[1].valueFormatter(2001)"
" -> Total Italy"
" -> (Blanks)"
" -> (Blanks) -> columnDef[1].valueFormatter(2000)"
""
" -> (Blanks) -> Total columnDef[1].valueFormatter(2000)"
" -> (Blanks) -> columnDef[1].valueFormatter(2001)"
""
" -> (Blanks) -> Total columnDef[1].valueFormatter(2001)"
" -> (Blanks) -> columnDef[1].valueFormatter()"
""
" -> (Blanks) -> Total columnDef[1].valueFormatter()"
" -> Total (Blanks)""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=singleColumn > pivotMode=false > showOpenedGroup=false > autoGroupColumnDef.valueGetter=undefined > autoGroupColumnDef.valueFormatter=(p) => \`autoColDef.valueFormatter(\${p.value})\` > autoGroupColumnDef.useValueFormatterForExport=true > colDef[1].valueFormatter=(p) => \`columnDef[1].valueFormatter(\${p.value})\` > colDef[1].useValueFormatterForExport=false 1`] = `
""Group"
" -> Ireland"
" -> Ireland -> 2000"
"autoColDef.valueFormatter(undefined)"
"autoColDef.valueFormatter(undefined)"
" -> Ireland -> Total 2000"
" -> Ireland -> "
"autoColDef.valueFormatter(undefined)"
" -> Ireland -> Total "
" -> Total Ireland"
" -> Italy"
" -> Italy -> 2000"
"autoColDef.valueFormatter(undefined)"
" -> Italy -> Total 2000"
" -> Italy -> 2001"
"autoColDef.valueFormatter(undefined)"
" -> Italy -> Total 2001"
" -> Total Italy"
" -> (Blanks)"
" -> (Blanks) -> 2000"
"autoColDef.valueFormatter(undefined)"
" -> (Blanks) -> Total 2000"
" -> (Blanks) -> 2001"
"autoColDef.valueFormatter(undefined)"
" -> (Blanks) -> Total 2001"
" -> (Blanks) -> "
"autoColDef.valueFormatter(undefined)"
" -> (Blanks) -> Total "
" -> Total (Blanks)""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=singleColumn > pivotMode=false > showOpenedGroup=false > autoGroupColumnDef.valueGetter=undefined > autoGroupColumnDef.valueFormatter=(p) => \`autoColDef.valueFormatter(\${p.value})\` > autoGroupColumnDef.useValueFormatterForExport=true > colDef[1].valueFormatter=(p) => \`columnDef[1].valueFormatter(\${p.value})\` > colDef[1].useValueFormatterForExport=true 1`] = `
""Group"
" -> Ireland"
" -> Ireland -> columnDef[1].valueFormatter(2000)"
"autoColDef.valueFormatter(undefined)"
"autoColDef.valueFormatter(undefined)"
" -> Ireland -> Total columnDef[1].valueFormatter(2000)"
" -> Ireland -> columnDef[1].valueFormatter()"
"autoColDef.valueFormatter(undefined)"
" -> Ireland -> Total columnDef[1].valueFormatter()"
" -> Total Ireland"
" -> Italy"
" -> Italy -> columnDef[1].valueFormatter(2000)"
"autoColDef.valueFormatter(undefined)"
" -> Italy -> Total columnDef[1].valueFormatter(2000)"
" -> Italy -> columnDef[1].valueFormatter(2001)"
"autoColDef.valueFormatter(undefined)"
" -> Italy -> Total columnDef[1].valueFormatter(2001)"
" -> Total Italy"
" -> (Blanks)"
" -> (Blanks) -> columnDef[1].valueFormatter(2000)"
"autoColDef.valueFormatter(undefined)"
" -> (Blanks) -> Total columnDef[1].valueFormatter(2000)"
" -> (Blanks) -> columnDef[1].valueFormatter(2001)"
"autoColDef.valueFormatter(undefined)"
" -> (Blanks) -> Total columnDef[1].valueFormatter(2001)"
" -> (Blanks) -> columnDef[1].valueFormatter()"
"autoColDef.valueFormatter(undefined)"
" -> (Blanks) -> Total columnDef[1].valueFormatter()"
" -> Total (Blanks)""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=singleColumn > pivotMode=false > showOpenedGroup=false > autoGroupColumnDef.valueGetter=undefined > autoGroupColumnDef.valueFormatter=(p) => \`autoColDef.valueFormatter(\${p.value})\` > autoGroupColumnDef.useValueFormatterForExport=true > colDef[1].valueFormatter=undefined > snapshot 1`] = `
""Group"
" -> Ireland"
" -> Ireland -> columnDef[1].valueFormatter(2000)"
"autoColDef.valueFormatter(undefined)"
"autoColDef.valueFormatter(undefined)"
" -> Ireland -> Total columnDef[1].valueFormatter(2000)"
" -> Ireland -> columnDef[1].valueFormatter()"
"autoColDef.valueFormatter(undefined)"
" -> Ireland -> Total columnDef[1].valueFormatter()"
" -> Total Ireland"
" -> Italy"
" -> Italy -> columnDef[1].valueFormatter(2000)"
"autoColDef.valueFormatter(undefined)"
" -> Italy -> Total columnDef[1].valueFormatter(2000)"
" -> Italy -> columnDef[1].valueFormatter(2001)"
"autoColDef.valueFormatter(undefined)"
" -> Italy -> Total columnDef[1].valueFormatter(2001)"
" -> Total Italy"
" -> (Blanks)"
" -> (Blanks) -> columnDef[1].valueFormatter(2000)"
"autoColDef.valueFormatter(undefined)"
" -> (Blanks) -> Total columnDef[1].valueFormatter(2000)"
" -> (Blanks) -> columnDef[1].valueFormatter(2001)"
"autoColDef.valueFormatter(undefined)"
" -> (Blanks) -> Total columnDef[1].valueFormatter(2001)"
" -> (Blanks) -> columnDef[1].valueFormatter()"
"autoColDef.valueFormatter(undefined)"
" -> (Blanks) -> Total columnDef[1].valueFormatter()"
" -> Total (Blanks)""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=singleColumn > pivotMode=false > showOpenedGroup=false > autoGroupColumnDef.valueGetter=undefined > autoGroupColumnDef.valueFormatter=undefined > colDef[1].valueFormatter=(p) => \`columnDef[1].valueFormatter(\${p.value})\` > colDef[1].useValueFormatterForExport=false 1`] = `
""Group"
" -> Ireland"
" -> Ireland -> 2000"
""
""
" -> Ireland -> Total 2000"
" -> Ireland -> "
""
" -> Ireland -> Total "
" -> Total Ireland"
" -> Italy"
" -> Italy -> 2000"
""
" -> Italy -> Total 2000"
" -> Italy -> 2001"
""
" -> Italy -> Total 2001"
" -> Total Italy"
" -> (Blanks)"
" -> (Blanks) -> 2000"
""
" -> (Blanks) -> Total 2000"
" -> (Blanks) -> 2001"
""
" -> (Blanks) -> Total 2001"
" -> (Blanks) -> "
""
" -> (Blanks) -> Total "
" -> Total (Blanks)""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=singleColumn > pivotMode=false > showOpenedGroup=false > autoGroupColumnDef.valueGetter=undefined > autoGroupColumnDef.valueFormatter=undefined > colDef[1].valueFormatter=(p) => \`columnDef[1].valueFormatter(\${p.value})\` > colDef[1].useValueFormatterForExport=true 1`] = `
""Group"
" -> Ireland"
" -> Ireland -> columnDef[1].valueFormatter(2000)"
""
""
" -> Ireland -> Total columnDef[1].valueFormatter(2000)"
" -> Ireland -> columnDef[1].valueFormatter()"
""
" -> Ireland -> Total columnDef[1].valueFormatter()"
" -> Total Ireland"
" -> Italy"
" -> Italy -> columnDef[1].valueFormatter(2000)"
""
" -> Italy -> Total columnDef[1].valueFormatter(2000)"
" -> Italy -> columnDef[1].valueFormatter(2001)"
""
" -> Italy -> Total columnDef[1].valueFormatter(2001)"
" -> Total Italy"
" -> (Blanks)"
" -> (Blanks) -> columnDef[1].valueFormatter(2000)"
""
" -> (Blanks) -> Total columnDef[1].valueFormatter(2000)"
" -> (Blanks) -> columnDef[1].valueFormatter(2001)"
""
" -> (Blanks) -> Total columnDef[1].valueFormatter(2001)"
" -> (Blanks) -> columnDef[1].valueFormatter()"
""
" -> (Blanks) -> Total columnDef[1].valueFormatter()"
" -> Total (Blanks)""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=singleColumn > pivotMode=false > showOpenedGroup=false > autoGroupColumnDef.valueGetter=undefined > autoGroupColumnDef.valueFormatter=undefined > colDef[1].valueFormatter=undefined > snapshot 1`] = `
""Group"
" -> Ireland"
" -> Ireland -> columnDef[1].valueFormatter(2000)"
""
""
" -> Ireland -> Total columnDef[1].valueFormatter(2000)"
" -> Ireland -> columnDef[1].valueFormatter()"
""
" -> Ireland -> Total columnDef[1].valueFormatter()"
" -> Total Ireland"
" -> Italy"
" -> Italy -> columnDef[1].valueFormatter(2000)"
""
" -> Italy -> Total columnDef[1].valueFormatter(2000)"
" -> Italy -> columnDef[1].valueFormatter(2001)"
""
" -> Italy -> Total columnDef[1].valueFormatter(2001)"
" -> Total Italy"
" -> (Blanks)"
" -> (Blanks) -> columnDef[1].valueFormatter(2000)"
""
" -> (Blanks) -> Total columnDef[1].valueFormatter(2000)"
" -> (Blanks) -> columnDef[1].valueFormatter(2001)"
""
" -> (Blanks) -> Total columnDef[1].valueFormatter(2001)"
" -> (Blanks) -> columnDef[1].valueFormatter()"
""
" -> (Blanks) -> Total columnDef[1].valueFormatter()"
" -> Total (Blanks)""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=singleColumn > pivotMode=false > showOpenedGroup=true > autoGroupColumnDef.valueFormatter=(p) => \`autoColDef.valueFormatter(\${p.value})\` > autoGroupColumnDef.useValueFormatterForExport=false > colDef[1].valueFormatter=(p) => \`columnDef[1].valueFormatter(\${p.value})\` > colDef[1].useValueFormatterForExport=false 1`] = `
""Group"
" -> Ireland"
" -> Ireland -> 2000"
"2000"
"2000"
" -> Ireland -> Total 2000"
" -> Ireland -> "
""
" -> Ireland -> Total "
" -> Total Ireland"
" -> Italy"
" -> Italy -> 2000"
"2000"
" -> Italy -> Total 2000"
" -> Italy -> 2001"
"2001"
" -> Italy -> Total 2001"
" -> Total Italy"
" -> (Blanks)"
" -> (Blanks) -> 2000"
"2000"
" -> (Blanks) -> Total 2000"
" -> (Blanks) -> 2001"
"2001"
" -> (Blanks) -> Total 2001"
" -> (Blanks) -> "
""
" -> (Blanks) -> Total "
" -> Total (Blanks)""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=singleColumn > pivotMode=false > showOpenedGroup=true > autoGroupColumnDef.valueFormatter=(p) => \`autoColDef.valueFormatter(\${p.value})\` > autoGroupColumnDef.useValueFormatterForExport=false > colDef[1].valueFormatter=(p) => \`columnDef[1].valueFormatter(\${p.value})\` > colDef[1].useValueFormatterForExport=true 1`] = `
""Group"
" -> Ireland"
" -> Ireland -> columnDef[1].valueFormatter(2000)"
"columnDef[1].valueFormatter(2000)"
"columnDef[1].valueFormatter(2000)"
" -> Ireland -> Total columnDef[1].valueFormatter(2000)"
" -> Ireland -> columnDef[1].valueFormatter()"
"columnDef[1].valueFormatter()"
" -> Ireland -> Total columnDef[1].valueFormatter()"
" -> Total Ireland"
" -> Italy"
" -> Italy -> columnDef[1].valueFormatter(2000)"
"columnDef[1].valueFormatter(2000)"
" -> Italy -> Total columnDef[1].valueFormatter(2000)"
" -> Italy -> columnDef[1].valueFormatter(2001)"
"columnDef[1].valueFormatter(2001)"
" -> Italy -> Total columnDef[1].valueFormatter(2001)"
" -> Total Italy"
" -> (Blanks)"
" -> (Blanks) -> columnDef[1].valueFormatter(2000)"
"columnDef[1].valueFormatter(2000)"
" -> (Blanks) -> Total columnDef[1].valueFormatter(2000)"
" -> (Blanks) -> columnDef[1].valueFormatter(2001)"
"columnDef[1].valueFormatter(2001)"
" -> (Blanks) -> Total columnDef[1].valueFormatter(2001)"
" -> (Blanks) -> columnDef[1].valueFormatter()"
"columnDef[1].valueFormatter()"
" -> (Blanks) -> Total columnDef[1].valueFormatter()"
" -> Total (Blanks)""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=singleColumn > pivotMode=false > showOpenedGroup=true > autoGroupColumnDef.valueFormatter=(p) => \`autoColDef.valueFormatter(\${p.value})\` > autoGroupColumnDef.useValueFormatterForExport=false > colDef[1].valueFormatter=undefined > snapshot 1`] = `
""Group"
" -> Ireland"
" -> Ireland -> columnDef[1].valueFormatter(2000)"
"columnDef[1].valueFormatter(2000)"
"columnDef[1].valueFormatter(2000)"
" -> Ireland -> Total columnDef[1].valueFormatter(2000)"
" -> Ireland -> columnDef[1].valueFormatter()"
"columnDef[1].valueFormatter()"
" -> Ireland -> Total columnDef[1].valueFormatter()"
" -> Total Ireland"
" -> Italy"
" -> Italy -> columnDef[1].valueFormatter(2000)"
"columnDef[1].valueFormatter(2000)"
" -> Italy -> Total columnDef[1].valueFormatter(2000)"
" -> Italy -> columnDef[1].valueFormatter(2001)"
"columnDef[1].valueFormatter(2001)"
" -> Italy -> Total columnDef[1].valueFormatter(2001)"
" -> Total Italy"
" -> (Blanks)"
" -> (Blanks) -> columnDef[1].valueFormatter(2000)"
"columnDef[1].valueFormatter(2000)"
" -> (Blanks) -> Total columnDef[1].valueFormatter(2000)"
" -> (Blanks) -> columnDef[1].valueFormatter(2001)"
"columnDef[1].valueFormatter(2001)"
" -> (Blanks) -> Total columnDef[1].valueFormatter(2001)"
" -> (Blanks) -> columnDef[1].valueFormatter()"
"columnDef[1].valueFormatter()"
" -> (Blanks) -> Total columnDef[1].valueFormatter()"
" -> Total (Blanks)""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=singleColumn > pivotMode=false > showOpenedGroup=true > autoGroupColumnDef.valueFormatter=(p) => \`autoColDef.valueFormatter(\${p.value})\` > autoGroupColumnDef.useValueFormatterForExport=true > colDef[1].valueFormatter=(p) => \`columnDef[1].valueFormatter(\${p.value})\` > colDef[1].useValueFormatterForExport=false 1`] = `
""Group"
" -> Ireland"
" -> Ireland -> 2000"
"2000"
"2000"
" -> Ireland -> Total 2000"
" -> Ireland -> "
""
" -> Ireland -> Total "
" -> Total Ireland"
" -> Italy"
" -> Italy -> 2000"
"2000"
" -> Italy -> Total 2000"
" -> Italy -> 2001"
"2001"
" -> Italy -> Total 2001"
" -> Total Italy"
" -> (Blanks)"
" -> (Blanks) -> 2000"
"2000"
" -> (Blanks) -> Total 2000"
" -> (Blanks) -> 2001"
"2001"
" -> (Blanks) -> Total 2001"
" -> (Blanks) -> "
""
" -> (Blanks) -> Total "
" -> Total (Blanks)""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=singleColumn > pivotMode=false > showOpenedGroup=true > autoGroupColumnDef.valueFormatter=(p) => \`autoColDef.valueFormatter(\${p.value})\` > autoGroupColumnDef.useValueFormatterForExport=true > colDef[1].valueFormatter=(p) => \`columnDef[1].valueFormatter(\${p.value})\` > colDef[1].useValueFormatterForExport=true 1`] = `
""Group"
" -> Ireland"
" -> Ireland -> columnDef[1].valueFormatter(2000)"
"columnDef[1].valueFormatter(2000)"
"columnDef[1].valueFormatter(2000)"
" -> Ireland -> Total columnDef[1].valueFormatter(2000)"
" -> Ireland -> columnDef[1].valueFormatter()"
"columnDef[1].valueFormatter()"
" -> Ireland -> Total columnDef[1].valueFormatter()"
" -> Total Ireland"
" -> Italy"
" -> Italy -> columnDef[1].valueFormatter(2000)"
"columnDef[1].valueFormatter(2000)"
" -> Italy -> Total columnDef[1].valueFormatter(2000)"
" -> Italy -> columnDef[1].valueFormatter(2001)"
"columnDef[1].valueFormatter(2001)"
" -> Italy -> Total columnDef[1].valueFormatter(2001)"
" -> Total Italy"
" -> (Blanks)"
" -> (Blanks) -> columnDef[1].valueFormatter(2000)"
"columnDef[1].valueFormatter(2000)"
" -> (Blanks) -> Total columnDef[1].valueFormatter(2000)"
" -> (Blanks) -> columnDef[1].valueFormatter(2001)"
"columnDef[1].valueFormatter(2001)"
" -> (Blanks) -> Total columnDef[1].valueFormatter(2001)"
" -> (Blanks) -> columnDef[1].valueFormatter()"
"columnDef[1].valueFormatter()"
" -> (Blanks) -> Total columnDef[1].valueFormatter()"
" -> Total (Blanks)""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=singleColumn > pivotMode=false > showOpenedGroup=true > autoGroupColumnDef.valueFormatter=(p) => \`autoColDef.valueFormatter(\${p.value})\` > autoGroupColumnDef.useValueFormatterForExport=true > colDef[1].valueFormatter=undefined > snapshot 1`] = `
""Group"
" -> Ireland"
" -> Ireland -> columnDef[1].valueFormatter(2000)"
"columnDef[1].valueFormatter(2000)"
"columnDef[1].valueFormatter(2000)"
" -> Ireland -> Total columnDef[1].valueFormatter(2000)"
" -> Ireland -> columnDef[1].valueFormatter()"
"columnDef[1].valueFormatter()"
" -> Ireland -> Total columnDef[1].valueFormatter()"
" -> Total Ireland"
" -> Italy"
" -> Italy -> columnDef[1].valueFormatter(2000)"
"columnDef[1].valueFormatter(2000)"
" -> Italy -> Total columnDef[1].valueFormatter(2000)"
" -> Italy -> columnDef[1].valueFormatter(2001)"
"columnDef[1].valueFormatter(2001)"
" -> Italy -> Total columnDef[1].valueFormatter(2001)"
" -> Total Italy"
" -> (Blanks)"
" -> (Blanks) -> columnDef[1].valueFormatter(2000)"
"columnDef[1].valueFormatter(2000)"
" -> (Blanks) -> Total columnDef[1].valueFormatter(2000)"
" -> (Blanks) -> columnDef[1].valueFormatter(2001)"
"columnDef[1].valueFormatter(2001)"
" -> (Blanks) -> Total columnDef[1].valueFormatter(2001)"
" -> (Blanks) -> columnDef[1].valueFormatter()"
"columnDef[1].valueFormatter()"
" -> (Blanks) -> Total columnDef[1].valueFormatter()"
" -> Total (Blanks)""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=singleColumn > pivotMode=false > showOpenedGroup=true > autoGroupColumnDef.valueFormatter=undefined > colDef[1].valueFormatter=(p) => \`columnDef[1].valueFormatter(\${p.value})\` > colDef[1].useValueFormatterForExport=false 1`] = `
""Group"
" -> Ireland"
" -> Ireland -> 2000"
"2000"
"2000"
" -> Ireland -> Total 2000"
" -> Ireland -> "
""
" -> Ireland -> Total "
" -> Total Ireland"
" -> Italy"
" -> Italy -> 2000"
"2000"
" -> Italy -> Total 2000"
" -> Italy -> 2001"
"2001"
" -> Italy -> Total 2001"
" -> Total Italy"
" -> (Blanks)"
" -> (Blanks) -> 2000"
"2000"
" -> (Blanks) -> Total 2000"
" -> (Blanks) -> 2001"
"2001"
" -> (Blanks) -> Total 2001"
" -> (Blanks) -> "
""
" -> (Blanks) -> Total "
" -> Total (Blanks)""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=singleColumn > pivotMode=false > showOpenedGroup=true > autoGroupColumnDef.valueFormatter=undefined > colDef[1].valueFormatter=(p) => \`columnDef[1].valueFormatter(\${p.value})\` > colDef[1].useValueFormatterForExport=true 1`] = `
""Group"
" -> Ireland"
" -> Ireland -> columnDef[1].valueFormatter(2000)"
"columnDef[1].valueFormatter(2000)"
"columnDef[1].valueFormatter(2000)"
" -> Ireland -> Total columnDef[1].valueFormatter(2000)"
" -> Ireland -> columnDef[1].valueFormatter()"
"columnDef[1].valueFormatter()"
" -> Ireland -> Total columnDef[1].valueFormatter()"
" -> Total Ireland"
" -> Italy"
" -> Italy -> columnDef[1].valueFormatter(2000)"
"columnDef[1].valueFormatter(2000)"
" -> Italy -> Total columnDef[1].valueFormatter(2000)"
" -> Italy -> columnDef[1].valueFormatter(2001)"
"columnDef[1].valueFormatter(2001)"
" -> Italy -> Total columnDef[1].valueFormatter(2001)"
" -> Total Italy"
" -> (Blanks)"
" -> (Blanks) -> columnDef[1].valueFormatter(2000)"
"columnDef[1].valueFormatter(2000)"
" -> (Blanks) -> Total columnDef[1].valueFormatter(2000)"
" -> (Blanks) -> columnDef[1].valueFormatter(2001)"
"columnDef[1].valueFormatter(2001)"
" -> (Blanks) -> Total columnDef[1].valueFormatter(2001)"
" -> (Blanks) -> columnDef[1].valueFormatter()"
"columnDef[1].valueFormatter()"
" -> (Blanks) -> Total columnDef[1].valueFormatter()"
" -> Total (Blanks)""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=singleColumn > pivotMode=false > showOpenedGroup=true > autoGroupColumnDef.valueFormatter=undefined > colDef[1].valueFormatter=undefined > snapshot 1`] = `
""Group"
" -> Ireland"
" -> Ireland -> columnDef[1].valueFormatter(2000)"
"columnDef[1].valueFormatter(2000)"
"columnDef[1].valueFormatter(2000)"
" -> Ireland -> Total columnDef[1].valueFormatter(2000)"
" -> Ireland -> columnDef[1].valueFormatter()"
"columnDef[1].valueFormatter()"
" -> Ireland -> Total columnDef[1].valueFormatter()"
" -> Total Ireland"
" -> Italy"
" -> Italy -> columnDef[1].valueFormatter(2000)"
"columnDef[1].valueFormatter(2000)"
" -> Italy -> Total columnDef[1].valueFormatter(2000)"
" -> Italy -> columnDef[1].valueFormatter(2001)"
"columnDef[1].valueFormatter(2001)"
" -> Italy -> Total columnDef[1].valueFormatter(2001)"
" -> Total Italy"
" -> (Blanks)"
" -> (Blanks) -> columnDef[1].valueFormatter(2000)"
"columnDef[1].valueFormatter(2000)"
" -> (Blanks) -> Total columnDef[1].valueFormatter(2000)"
" -> (Blanks) -> columnDef[1].valueFormatter(2001)"
"columnDef[1].valueFormatter(2001)"
" -> (Blanks) -> Total columnDef[1].valueFormatter(2001)"
" -> (Blanks) -> columnDef[1].valueFormatter()"
"columnDef[1].valueFormatter()"
" -> (Blanks) -> Total columnDef[1].valueFormatter()"
" -> Total (Blanks)""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=singleColumn > pivotMode=true > showOpenedGroup=false > autoGroupColumnDef.valueGetter=(p) => \`autoColDef.valueGetter(\${p.data?.athlete ?? "MISSING"})\` > autoGroupColumnDef.valueFormatter=(p) => \`autoColDef.valueFormatter(\${p.value})\` > autoGroupColumnDef.useValueFormatterForExport=false > colDef[1].valueFormatter=(p) => \`columnDef[1].valueFormatter(\${p.value})\` > colDef[1].useValueFormatterForExport=false 1`] = `
""Group"
" -> Ireland"
" -> Ireland -> 2000"
" -> Ireland -> "
" -> Total Ireland"
" -> Italy"
" -> Italy -> 2000"
" -> Italy -> 2001"
" -> Total Italy"
" -> (Blanks)"
" -> (Blanks) -> 2000"
" -> (Blanks) -> 2001"
" -> (Blanks) -> "
" -> Total (Blanks)""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=singleColumn > pivotMode=true > showOpenedGroup=false > autoGroupColumnDef.valueGetter=(p) => \`autoColDef.valueGetter(\${p.data?.athlete ?? "MISSING"})\` > autoGroupColumnDef.valueFormatter=(p) => \`autoColDef.valueFormatter(\${p.value})\` > autoGroupColumnDef.useValueFormatterForExport=false > colDef[1].valueFormatter=(p) => \`columnDef[1].valueFormatter(\${p.value})\` > colDef[1].useValueFormatterForExport=true 1`] = `
""Group"
" -> Ireland"
" -> Ireland -> columnDef[1].valueFormatter(2000)"
" -> Ireland -> columnDef[1].valueFormatter()"
" -> Total Ireland"
" -> Italy"
" -> Italy -> columnDef[1].valueFormatter(2000)"
" -> Italy -> columnDef[1].valueFormatter(2001)"
" -> Total Italy"
" -> (Blanks)"
" -> (Blanks) -> columnDef[1].valueFormatter(2000)"
" -> (Blanks) -> columnDef[1].valueFormatter(2001)"
" -> (Blanks) -> columnDef[1].valueFormatter()"
" -> Total (Blanks)""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=singleColumn > pivotMode=true > showOpenedGroup=false > autoGroupColumnDef.valueGetter=(p) => \`autoColDef.valueGetter(\${p.data?.athlete ?? "MISSING"})\` > autoGroupColumnDef.valueFormatter=(p) => \`autoColDef.valueFormatter(\${p.value})\` > autoGroupColumnDef.useValueFormatterForExport=false > colDef[1].valueFormatter=undefined > snapshot 1`] = `
""Group"
" -> Ireland"
" -> Ireland -> columnDef[1].valueFormatter(2000)"
" -> Ireland -> columnDef[1].valueFormatter()"
" -> Total Ireland"
" -> Italy"
" -> Italy -> columnDef[1].valueFormatter(2000)"
" -> Italy -> columnDef[1].valueFormatter(2001)"
" -> Total Italy"
" -> (Blanks)"
" -> (Blanks) -> columnDef[1].valueFormatter(2000)"
" -> (Blanks) -> columnDef[1].valueFormatter(2001)"
" -> (Blanks) -> columnDef[1].valueFormatter()"
" -> Total (Blanks)""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=singleColumn > pivotMode=true > showOpenedGroup=false > autoGroupColumnDef.valueGetter=(p) => \`autoColDef.valueGetter(\${p.data?.athlete ?? "MISSING"})\` > autoGroupColumnDef.valueFormatter=(p) => \`autoColDef.valueFormatter(\${p.value})\` > autoGroupColumnDef.useValueFormatterForExport=true > colDef[1].valueFormatter=(p) => \`columnDef[1].valueFormatter(\${p.value})\` > colDef[1].useValueFormatterForExport=false 1`] = `
""Group"
" -> Ireland"
" -> Ireland -> 2000"
" -> Ireland -> "
" -> Total Ireland"
" -> Italy"
" -> Italy -> 2000"
" -> Italy -> 2001"
" -> Total Italy"
" -> (Blanks)"
" -> (Blanks) -> 2000"
" -> (Blanks) -> 2001"
" -> (Blanks) -> "
" -> Total (Blanks)""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=singleColumn > pivotMode=true > showOpenedGroup=false > autoGroupColumnDef.valueGetter=(p) => \`autoColDef.valueGetter(\${p.data?.athlete ?? "MISSING"})\` > autoGroupColumnDef.valueFormatter=(p) => \`autoColDef.valueFormatter(\${p.value})\` > autoGroupColumnDef.useValueFormatterForExport=true > colDef[1].valueFormatter=(p) => \`columnDef[1].valueFormatter(\${p.value})\` > colDef[1].useValueFormatterForExport=true 1`] = `
""Group"
" -> Ireland"
" -> Ireland -> columnDef[1].valueFormatter(2000)"
" -> Ireland -> columnDef[1].valueFormatter()"
" -> Total Ireland"
" -> Italy"
" -> Italy -> columnDef[1].valueFormatter(2000)"
" -> Italy -> columnDef[1].valueFormatter(2001)"
" -> Total Italy"
" -> (Blanks)"
" -> (Blanks) -> columnDef[1].valueFormatter(2000)"
" -> (Blanks) -> columnDef[1].valueFormatter(2001)"
" -> (Blanks) -> columnDef[1].valueFormatter()"
" -> Total (Blanks)""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=singleColumn > pivotMode=true > showOpenedGroup=false > autoGroupColumnDef.valueGetter=(p) => \`autoColDef.valueGetter(\${p.data?.athlete ?? "MISSING"})\` > autoGroupColumnDef.valueFormatter=(p) => \`autoColDef.valueFormatter(\${p.value})\` > autoGroupColumnDef.useValueFormatterForExport=true > colDef[1].valueFormatter=undefined > snapshot 1`] = `
""Group"
" -> Ireland"
" -> Ireland -> columnDef[1].valueFormatter(2000)"
" -> Ireland -> columnDef[1].valueFormatter()"
" -> Total Ireland"
" -> Italy"
" -> Italy -> columnDef[1].valueFormatter(2000)"
" -> Italy -> columnDef[1].valueFormatter(2001)"
" -> Total Italy"
" -> (Blanks)"
" -> (Blanks) -> columnDef[1].valueFormatter(2000)"
" -> (Blanks) -> columnDef[1].valueFormatter(2001)"
" -> (Blanks) -> columnDef[1].valueFormatter()"
" -> Total (Blanks)""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=singleColumn > pivotMode=true > showOpenedGroup=false > autoGroupColumnDef.valueGetter=(p) => \`autoColDef.valueGetter(\${p.data?.athlete ?? "MISSING"})\` > autoGroupColumnDef.valueFormatter=undefined > colDef[1].valueFormatter=(p) => \`columnDef[1].valueFormatter(\${p.value})\` > colDef[1].useValueFormatterForExport=false 1`] = `
""Group"
" -> Ireland"
" -> Ireland -> 2000"
" -> Ireland -> "
" -> Total Ireland"
" -> Italy"
" -> Italy -> 2000"
" -> Italy -> 2001"
" -> Total Italy"
" -> (Blanks)"
" -> (Blanks) -> 2000"
" -> (Blanks) -> 2001"
" -> (Blanks) -> "
" -> Total (Blanks)""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=singleColumn > pivotMode=true > showOpenedGroup=false > autoGroupColumnDef.valueGetter=(p) => \`autoColDef.valueGetter(\${p.data?.athlete ?? "MISSING"})\` > autoGroupColumnDef.valueFormatter=undefined > colDef[1].valueFormatter=(p) => \`columnDef[1].valueFormatter(\${p.value})\` > colDef[1].useValueFormatterForExport=true 1`] = `
""Group"
" -> Ireland"
" -> Ireland -> columnDef[1].valueFormatter(2000)"
" -> Ireland -> columnDef[1].valueFormatter()"
" -> Total Ireland"
" -> Italy"
" -> Italy -> columnDef[1].valueFormatter(2000)"
" -> Italy -> columnDef[1].valueFormatter(2001)"
" -> Total Italy"
" -> (Blanks)"
" -> (Blanks) -> columnDef[1].valueFormatter(2000)"
" -> (Blanks) -> columnDef[1].valueFormatter(2001)"
" -> (Blanks) -> columnDef[1].valueFormatter()"
" -> Total (Blanks)""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=singleColumn > pivotMode=true > showOpenedGroup=false > autoGroupColumnDef.valueGetter=(p) => \`autoColDef.valueGetter(\${p.data?.athlete ?? "MISSING"})\` > autoGroupColumnDef.valueFormatter=undefined > colDef[1].valueFormatter=undefined > snapshot 1`] = `
""Group"
" -> Ireland"
" -> Ireland -> columnDef[1].valueFormatter(2000)"
" -> Ireland -> columnDef[1].valueFormatter()"
" -> Total Ireland"
" -> Italy"
" -> Italy -> columnDef[1].valueFormatter(2000)"
" -> Italy -> columnDef[1].valueFormatter(2001)"
" -> Total Italy"
" -> (Blanks)"
" -> (Blanks) -> columnDef[1].valueFormatter(2000)"
" -> (Blanks) -> columnDef[1].valueFormatter(2001)"
" -> (Blanks) -> columnDef[1].valueFormatter()"
" -> Total (Blanks)""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=singleColumn > pivotMode=true > showOpenedGroup=false > autoGroupColumnDef.valueGetter=undefined > autoGroupColumnDef.valueFormatter=(p) => \`autoColDef.valueFormatter(\${p.value})\` > autoGroupColumnDef.useValueFormatterForExport=false > colDef[1].valueFormatter=(p) => \`columnDef[1].valueFormatter(\${p.value})\` > colDef[1].useValueFormatterForExport=false 1`] = `
""Group"
" -> Ireland"
" -> Ireland -> 2000"
" -> Ireland -> "
" -> Total Ireland"
" -> Italy"
" -> Italy -> 2000"
" -> Italy -> 2001"
" -> Total Italy"
" -> (Blanks)"
" -> (Blanks) -> 2000"
" -> (Blanks) -> 2001"
" -> (Blanks) -> "
" -> Total (Blanks)""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=singleColumn > pivotMode=true > showOpenedGroup=false > autoGroupColumnDef.valueGetter=undefined > autoGroupColumnDef.valueFormatter=(p) => \`autoColDef.valueFormatter(\${p.value})\` > autoGroupColumnDef.useValueFormatterForExport=false > colDef[1].valueFormatter=(p) => \`columnDef[1].valueFormatter(\${p.value})\` > colDef[1].useValueFormatterForExport=true 1`] = `
""Group"
" -> Ireland"
" -> Ireland -> columnDef[1].valueFormatter(2000)"
" -> Ireland -> columnDef[1].valueFormatter()"
" -> Total Ireland"
" -> Italy"
" -> Italy -> columnDef[1].valueFormatter(2000)"
" -> Italy -> columnDef[1].valueFormatter(2001)"
" -> Total Italy"
" -> (Blanks)"
" -> (Blanks) -> columnDef[1].valueFormatter(2000)"
" -> (Blanks) -> columnDef[1].valueFormatter(2001)"
" -> (Blanks) -> columnDef[1].valueFormatter()"
" -> Total (Blanks)""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=singleColumn > pivotMode=true > showOpenedGroup=false > autoGroupColumnDef.valueGetter=undefined > autoGroupColumnDef.valueFormatter=(p) => \`autoColDef.valueFormatter(\${p.value})\` > autoGroupColumnDef.useValueFormatterForExport=false > colDef[1].valueFormatter=undefined > snapshot 1`] = `
""Group"
" -> Ireland"
" -> Ireland -> columnDef[1].valueFormatter(2000)"
" -> Ireland -> columnDef[1].valueFormatter()"
" -> Total Ireland"
" -> Italy"
" -> Italy -> columnDef[1].valueFormatter(2000)"
" -> Italy -> columnDef[1].valueFormatter(2001)"
" -> Total Italy"
" -> (Blanks)"
" -> (Blanks) -> columnDef[1].valueFormatter(2000)"
" -> (Blanks) -> columnDef[1].valueFormatter(2001)"
" -> (Blanks) -> columnDef[1].valueFormatter()"
" -> Total (Blanks)""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=singleColumn > pivotMode=true > showOpenedGroup=false > autoGroupColumnDef.valueGetter=undefined > autoGroupColumnDef.valueFormatter=(p) => \`autoColDef.valueFormatter(\${p.value})\` > autoGroupColumnDef.useValueFormatterForExport=true > colDef[1].valueFormatter=(p) => \`columnDef[1].valueFormatter(\${p.value})\` > colDef[1].useValueFormatterForExport=false 1`] = `
""Group"
" -> Ireland"
" -> Ireland -> 2000"
" -> Ireland -> "
" -> Total Ireland"
" -> Italy"
" -> Italy -> 2000"
" -> Italy -> 2001"
" -> Total Italy"
" -> (Blanks)"
" -> (Blanks) -> 2000"
" -> (Blanks) -> 2001"
" -> (Blanks) -> "
" -> Total (Blanks)""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=singleColumn > pivotMode=true > showOpenedGroup=false > autoGroupColumnDef.valueGetter=undefined > autoGroupColumnDef.valueFormatter=(p) => \`autoColDef.valueFormatter(\${p.value})\` > autoGroupColumnDef.useValueFormatterForExport=true > colDef[1].valueFormatter=(p) => \`columnDef[1].valueFormatter(\${p.value})\` > colDef[1].useValueFormatterForExport=true 1`] = `
""Group"
" -> Ireland"
" -> Ireland -> columnDef[1].valueFormatter(2000)"
" -> Ireland -> columnDef[1].valueFormatter()"
" -> Total Ireland"
" -> Italy"
" -> Italy -> columnDef[1].valueFormatter(2000)"
" -> Italy -> columnDef[1].valueFormatter(2001)"
" -> Total Italy"
" -> (Blanks)"
" -> (Blanks) -> columnDef[1].valueFormatter(2000)"
" -> (Blanks) -> columnDef[1].valueFormatter(2001)"
" -> (Blanks) -> columnDef[1].valueFormatter()"
" -> Total (Blanks)""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=singleColumn > pivotMode=true > showOpenedGroup=false > autoGroupColumnDef.valueGetter=undefined > autoGroupColumnDef.valueFormatter=(p) => \`autoColDef.valueFormatter(\${p.value})\` > autoGroupColumnDef.useValueFormatterForExport=true > colDef[1].valueFormatter=undefined > snapshot 1`] = `
""Group"
" -> Ireland"
" -> Ireland -> columnDef[1].valueFormatter(2000)"
" -> Ireland -> columnDef[1].valueFormatter()"
" -> Total Ireland"
" -> Italy"
" -> Italy -> columnDef[1].valueFormatter(2000)"
" -> Italy -> columnDef[1].valueFormatter(2001)"
" -> Total Italy"
" -> (Blanks)"
" -> (Blanks) -> columnDef[1].valueFormatter(2000)"
" -> (Blanks) -> columnDef[1].valueFormatter(2001)"
" -> (Blanks) -> columnDef[1].valueFormatter()"
" -> Total (Blanks)""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=singleColumn > pivotMode=true > showOpenedGroup=false > autoGroupColumnDef.valueGetter=undefined > autoGroupColumnDef.valueFormatter=undefined > colDef[1].valueFormatter=(p) => \`columnDef[1].valueFormatter(\${p.value})\` > colDef[1].useValueFormatterForExport=false 1`] = `
""Group"
" -> Ireland"
" -> Ireland -> 2000"
" -> Ireland -> "
" -> Total Ireland"
" -> Italy"
" -> Italy -> 2000"
" -> Italy -> 2001"
" -> Total Italy"
" -> (Blanks)"
" -> (Blanks) -> 2000"
" -> (Blanks) -> 2001"
" -> (Blanks) -> "
" -> Total (Blanks)""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=singleColumn > pivotMode=true > showOpenedGroup=false > autoGroupColumnDef.valueGetter=undefined > autoGroupColumnDef.valueFormatter=undefined > colDef[1].valueFormatter=(p) => \`columnDef[1].valueFormatter(\${p.value})\` > colDef[1].useValueFormatterForExport=true 1`] = `
""Group"
" -> Ireland"
" -> Ireland -> columnDef[1].valueFormatter(2000)"
" -> Ireland -> columnDef[1].valueFormatter()"
" -> Total Ireland"
" -> Italy"
" -> Italy -> columnDef[1].valueFormatter(2000)"
" -> Italy -> columnDef[1].valueFormatter(2001)"
" -> Total Italy"
" -> (Blanks)"
" -> (Blanks) -> columnDef[1].valueFormatter(2000)"
" -> (Blanks) -> columnDef[1].valueFormatter(2001)"
" -> (Blanks) -> columnDef[1].valueFormatter()"
" -> Total (Blanks)""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=singleColumn > pivotMode=true > showOpenedGroup=false > autoGroupColumnDef.valueGetter=undefined > autoGroupColumnDef.valueFormatter=undefined > colDef[1].valueFormatter=undefined > snapshot 1`] = `
""Group"
" -> Ireland"
" -> Ireland -> columnDef[1].valueFormatter(2000)"
" -> Ireland -> columnDef[1].valueFormatter()"
" -> Total Ireland"
" -> Italy"
" -> Italy -> columnDef[1].valueFormatter(2000)"
" -> Italy -> columnDef[1].valueFormatter(2001)"
" -> Total Italy"
" -> (Blanks)"
" -> (Blanks) -> columnDef[1].valueFormatter(2000)"
" -> (Blanks) -> columnDef[1].valueFormatter(2001)"
" -> (Blanks) -> columnDef[1].valueFormatter()"
" -> Total (Blanks)""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=singleColumn > pivotMode=true > showOpenedGroup=true > autoGroupColumnDef.valueFormatter=(p) => \`autoColDef.valueFormatter(\${p.value})\` > autoGroupColumnDef.useValueFormatterForExport=false > colDef[1].valueFormatter=(p) => \`columnDef[1].valueFormatter(\${p.value})\` > colDef[1].useValueFormatterForExport=false 1`] = `
""Group"
" -> Ireland"
" -> Ireland -> 2000"
" -> Ireland -> "
" -> Total Ireland"
" -> Italy"
" -> Italy -> 2000"
" -> Italy -> 2001"
" -> Total Italy"
" -> (Blanks)"
" -> (Blanks) -> 2000"
" -> (Blanks) -> 2001"
" -> (Blanks) -> "
" -> Total (Blanks)""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=singleColumn > pivotMode=true > showOpenedGroup=true > autoGroupColumnDef.valueFormatter=(p) => \`autoColDef.valueFormatter(\${p.value})\` > autoGroupColumnDef.useValueFormatterForExport=false > colDef[1].valueFormatter=(p) => \`columnDef[1].valueFormatter(\${p.value})\` > colDef[1].useValueFormatterForExport=true 1`] = `
""Group"
" -> Ireland"
" -> Ireland -> columnDef[1].valueFormatter(2000)"
" -> Ireland -> columnDef[1].valueFormatter()"
" -> Total Ireland"
" -> Italy"
" -> Italy -> columnDef[1].valueFormatter(2000)"
" -> Italy -> columnDef[1].valueFormatter(2001)"
" -> Total Italy"
" -> (Blanks)"
" -> (Blanks) -> columnDef[1].valueFormatter(2000)"
" -> (Blanks) -> columnDef[1].valueFormatter(2001)"
" -> (Blanks) -> columnDef[1].valueFormatter()"
" -> Total (Blanks)""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=singleColumn > pivotMode=true > showOpenedGroup=true > autoGroupColumnDef.valueFormatter=(p) => \`autoColDef.valueFormatter(\${p.value})\` > autoGroupColumnDef.useValueFormatterForExport=false > colDef[1].valueFormatter=undefined > snapshot 1`] = `
""Group"
" -> Ireland"
" -> Ireland -> columnDef[1].valueFormatter(2000)"
" -> Ireland -> columnDef[1].valueFormatter()"
" -> Total Ireland"
" -> Italy"
" -> Italy -> columnDef[1].valueFormatter(2000)"
" -> Italy -> columnDef[1].valueFormatter(2001)"
" -> Total Italy"
" -> (Blanks)"
" -> (Blanks) -> columnDef[1].valueFormatter(2000)"
" -> (Blanks) -> columnDef[1].valueFormatter(2001)"
" -> (Blanks) -> columnDef[1].valueFormatter()"
" -> Total (Blanks)""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=singleColumn > pivotMode=true > showOpenedGroup=true > autoGroupColumnDef.valueFormatter=(p) => \`autoColDef.valueFormatter(\${p.value})\` > autoGroupColumnDef.useValueFormatterForExport=true > colDef[1].valueFormatter=(p) => \`columnDef[1].valueFormatter(\${p.value})\` > colDef[1].useValueFormatterForExport=false 1`] = `
""Group"
" -> Ireland"
" -> Ireland -> 2000"
" -> Ireland -> "
" -> Total Ireland"
" -> Italy"
" -> Italy -> 2000"
" -> Italy -> 2001"
" -> Total Italy"
" -> (Blanks)"
" -> (Blanks) -> 2000"
" -> (Blanks) -> 2001"
" -> (Blanks) -> "
" -> Total (Blanks)""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=singleColumn > pivotMode=true > showOpenedGroup=true > autoGroupColumnDef.valueFormatter=(p) => \`autoColDef.valueFormatter(\${p.value})\` > autoGroupColumnDef.useValueFormatterForExport=true > colDef[1].valueFormatter=(p) => \`columnDef[1].valueFormatter(\${p.value})\` > colDef[1].useValueFormatterForExport=true 1`] = `
""Group"
" -> Ireland"
" -> Ireland -> columnDef[1].valueFormatter(2000)"
" -> Ireland -> columnDef[1].valueFormatter()"
" -> Total Ireland"
" -> Italy"
" -> Italy -> columnDef[1].valueFormatter(2000)"
" -> Italy -> columnDef[1].valueFormatter(2001)"
" -> Total Italy"
" -> (Blanks)"
" -> (Blanks) -> columnDef[1].valueFormatter(2000)"
" -> (Blanks) -> columnDef[1].valueFormatter(2001)"
" -> (Blanks) -> columnDef[1].valueFormatter()"
" -> Total (Blanks)""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=singleColumn > pivotMode=true > showOpenedGroup=true > autoGroupColumnDef.valueFormatter=(p) => \`autoColDef.valueFormatter(\${p.value})\` > autoGroupColumnDef.useValueFormatterForExport=true > colDef[1].valueFormatter=undefined > snapshot 1`] = `
""Group"
" -> Ireland"
" -> Ireland -> columnDef[1].valueFormatter(2000)"
" -> Ireland -> columnDef[1].valueFormatter()"
" -> Total Ireland"
" -> Italy"
" -> Italy -> columnDef[1].valueFormatter(2000)"
" -> Italy -> columnDef[1].valueFormatter(2001)"
" -> Total Italy"
" -> (Blanks)"
" -> (Blanks) -> columnDef[1].valueFormatter(2000)"
" -> (Blanks) -> columnDef[1].valueFormatter(2001)"
" -> (Blanks) -> columnDef[1].valueFormatter()"
" -> Total (Blanks)""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=singleColumn > pivotMode=true > showOpenedGroup=true > autoGroupColumnDef.valueFormatter=undefined > colDef[1].valueFormatter=(p) => \`columnDef[1].valueFormatter(\${p.value})\` > colDef[1].useValueFormatterForExport=false 1`] = `
""Group"
" -> Ireland"
" -> Ireland -> 2000"
" -> Ireland -> "
" -> Total Ireland"
" -> Italy"
" -> Italy -> 2000"
" -> Italy -> 2001"
" -> Total Italy"
" -> (Blanks)"
" -> (Blanks) -> 2000"
" -> (Blanks) -> 2001"
" -> (Blanks) -> "
" -> Total (Blanks)""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=singleColumn > pivotMode=true > showOpenedGroup=true > autoGroupColumnDef.valueFormatter=undefined > colDef[1].valueFormatter=(p) => \`columnDef[1].valueFormatter(\${p.value})\` > colDef[1].useValueFormatterForExport=true 1`] = `
""Group"
" -> Ireland"
" -> Ireland -> columnDef[1].valueFormatter(2000)"
" -> Ireland -> columnDef[1].valueFormatter()"
" -> Total Ireland"
" -> Italy"
" -> Italy -> columnDef[1].valueFormatter(2000)"
" -> Italy -> columnDef[1].valueFormatter(2001)"
" -> Total Italy"
" -> (Blanks)"
" -> (Blanks) -> columnDef[1].valueFormatter(2000)"
" -> (Blanks) -> columnDef[1].valueFormatter(2001)"
" -> (Blanks) -> columnDef[1].valueFormatter()"
" -> Total (Blanks)""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=singleColumn > pivotMode=true > showOpenedGroup=true > autoGroupColumnDef.valueFormatter=undefined > colDef[1].valueFormatter=undefined > snapshot 1`] = `
""Group"
" -> Ireland"
" -> Ireland -> columnDef[1].valueFormatter(2000)"
" -> Ireland -> columnDef[1].valueFormatter()"
" -> Total Ireland"
" -> Italy"
" -> Italy -> columnDef[1].valueFormatter(2000)"
" -> Italy -> columnDef[1].valueFormatter(2001)"
" -> Total Italy"
" -> (Blanks)"
" -> (Blanks) -> columnDef[1].valueFormatter(2000)"
" -> (Blanks) -> columnDef[1].valueFormatter(2001)"
" -> (Blanks) -> columnDef[1].valueFormatter()"
" -> Total (Blanks)""
`;
